# netcup-offer-bot

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: auto-merge-release-please.yml  build.yaml  release-please.yaml  sentry.yaml
src/: config.rs  discord_webhook.rs  error.rs  feed.rs  feed_state.rs  lib.rs  main.rs  metrics.rs
tests/: webhook_retry.rs
