[package]
name = "netcup-offer-bot"
version = "1.3.1"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "netcup-offer-bot"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
thiserror = "2.0.18"
backtrace = "0.3.76"
sentry = { version = "0.46.1", default-features = false, features = ["anyhow", "debug-images", "reqwest", "rustls", "backtrace", "tracing"] }
chrono = { version = "0.4.43", default-features = false, features = ["clock", "std", "wasmbind", "serde"] }
rss = { version = "2.0.12", features = ["validation"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "stream", "gzip"] }
reqwest-middleware = "0.5.0"
reqwest-tracing = "0.6.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde = "1.0.228"
serde_json = "1.0.149"
prometheus = { version = "0.14.0", features = ["process"] }
prometheus_exporter = "0.8.5"
secrecy = { version = "0.10.3", features = ["serde"] }
config = "0.15.19"

[dev-dependencies]
temp-env = "=0.3.6"
tempfile = "=3.24.0"
serde_test = "=1.0.177"
wiremock = "=0.6.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
